# AdbLib-Google-PlatformTools

./: .gitignore  BUILD.bazel  Directory_Structure  Project_Structure  README-origin.md  README.md  WORKSPACE  build.gradle.kt  build.gradle.kts  lint_baseline_adblib.xml  settings.gradle.kt  settings.gradle.kts
.github/workflows/: update_adblib.yml
adblib/: BUILD  README.md  lint_baseline.xml
adblib/proto/: devices.proto
adblib/src/com/android/adblib/: AdbChannelFactory.kt  AdbChannelProviderFactory.kt  AdbDeviceServices.kt  AdbDeviceSyncServices.kt  AdbFailResponseException.kt  AdbFeatures.kt  AdbHostServices.kt  AdbInputChannel.kt  AdbLibProperties.kt  AdbLogger.kt  AdbOutputChannel.kt  AdbServerChannelProvider.kt  AdbServerStartup.kt  AdbSession.kt  AdbSessionHost.kt  AdbUsageTracker.kt  ConnectedDevice.kt  ConnectedDevicesTracker.kt  CoroutineScopeCache.kt  DeviceCacheProvider.kt  DevicePropertyNames.kt  DeviceSelector.kt  DeviceState.kt  IsThreadSafe.kt  ShellCommand.kt  SystemNanoTimeProvider.kt
adblib/src/com/android/adblib/impl/: AbbCommandImpl.kt  AdbBufferedInputChannelImpl.kt  AdbChannelProviderConnectAddresses.kt  AdbChannelProviderOpenLocalHost.kt  AdbChannelProviderWithServerStartup.kt  AdbDeviceServicesImpl.kt  AdbDeviceSyncServicesImpl.kt  AdbHostServicesImpl.kt  AdbPipedInputChannelImpl.kt  AdbReadAheadInputChannel.kt  AdbServerStartupImpl.kt  AdbSessionImpl.kt  AdbWriteBackOutputChannel.kt  ConnectedDeviceImpl.kt  ConnectedDevicesDeviceCacheProvider.kt  ConnectedDevicesTrackerImpl.kt  CoroutineScopeCacheImpl.kt  DeviceListParser.kt  DevicePropertiesImpl.kt  InactiveCoroutineScopeCache.kt  InputChannelShellOutputImpl.kt  SessionDeviceTracker.kt  ShellCommandHelpers.kt  ShellCommandImpl.kt  ShellV2ProtocolHandler.kt  ShellWithIdleMonitoring.kt  SyncRecvHandler.kt  SyncSendHandler.kt  TimeoutTracker.kt
adblib/src/com/android/adblib/impl/channels/: AdbChannelFactoryImpl.kt  AdbInputChannelSliceImpl.kt  AdbInputFileChannel.kt  AdbInputStreamChannel.kt  AdbOutputFileChannel.kt  AdbOutputStreamChannel.kt  AdbServerSocketImpl.kt  AdbSocketChannelImpl.kt  ByteBufferAdbInputChannelImpl.kt  ChannelReadOrWriteHandler.kt  ChannelUtils.kt  ContinuationCompletionHandler.kt
adblib/src/com/android/adblib/impl/services/: AdbServiceRunner.kt  TrackDevicesService.kt  TrackJdwpService.kt
adblib/src/com/android/adblib/testing/: FakeAdbDeviceServices.kt  FakeAdbHostServices.kt  FakeAdbLoggerFactory.kt  FakeAdbSession.kt
adblib/src/com/android/adblib/utils/: AdbProtocolUtils.kt  CollectionUtils.kt  CoroutineUtils.kt  JdkLoggerFactory.kt  ResizableBuffer.kt
adblib/test/src/com/android/adblib/: AdbDeviceServicesTest.kt  AdbFailResponseExceptionTest.kt  AdbHostServicesTest.kt  AdbSessionTest.kt  ConnectedDeviceTest.kt  ConnectedDevicesTrackerTest.kt  DeviceSelectorTest.kt
adblib/test/src/com/android/adblib/impl/: CoroutineScopeCacheTest.kt  DeviceListParserTest.kt  InactiveCoroutineScopeCacheTest.kt
adblib/test/src/com/android/adblib/impl/channels/: AdbBufferedInputChannelTest.kt  AdbInputFileChannelTest.kt  AdbPipedInputChannelTest.kt  AdbReadAheadInputChannelTest.kt  AdbSocketChannelImplTest.kt
adblib/test/src/com/android/adblib/testingutils/: ByteBufferUtils.kt  CoroutineTestUtils.kt  FakeAdbServerProvider.kt  FakeAdbServerProviderRule.kt  TestingAdbLogger.kt  TestingAdbSession.kt  TestingAdbSessionHost.kt  TestingAdbUsageTracker.kt
adblib/test/src/com/android/adblib/utils/: RunAlongOtherScopeTest.kt
src/: BUILD  build.gradle.kt  build.gradle.kts
src/com/android/adblib/: AdbFeatures.kt  AdbSession.kt  AutoShutdown.kt  DeviceInfo.kt
src/com/android/adblib/impl/: AdbPipedInputChannelImpl.kt  AdbSessionImpl.kt  ConnectedDeviceImpl.kt  SessionDeviceTracker.kt
src/com/android/adblib/impl/channels/: AdbInputChannelReader.kt  AdbOutputStreamChannel.kt  ByteBufferAdbInputChannelImpl.kt  ByteBufferAdbOutputChannelImpl.kt
src/com/android/adblib/testing/: FakeAdbLoggerFactory.kt
src/com/android/adblib/utils/: CoroutineUtils.kt
src/main/kotlin/com/android/adblib/: AbbCommand.kt  AdbDeviceServices.kt  ConnectedDevice.kt  DevicePropertyNames.kt  Main.kt
src/main/kotlin/com/android/adblib/impl/: AdbReadAheadInputChannel.kt  ShellWithIdleMonitoring.kt
src/main/kotlin/com/android/adblib/impl/channels/: AdbInputStreamChannel.kt  AdbSocketChannelImpl.kt  EmptyAdbInputChannelImpl.kt
src/main/kotlin/com/android/adblib/impl/services/: TrackAppService.kt
src/main/kotlin/com/android/adblib/utils/: ByteArrayShellCollector.kt  SuspendingLazy.kt
src/test/: BUILD
src/test/kotlin/com/android/adblib/: AdbSessionHostTest.kt  DeviceSelectorTest.kt
src/test/kotlin/com/android/adblib/impl/: AdbChannelProviderWithServerStartupTest.kt
src/test/kotlin/com/android/adblib/testingutils/: FakeAdbServerProviderRule.kt
src/test/kotlin/com/android/adblib/utils/: AdbProtocolUtilsTest.kt
temp/: BUILD  lint_baseline_tests.xml
temp/src/com/android/adblib/: AdbChannelExtensions.kt  AdbFailResponseException.kt  AdbLibProperties.kt  AdbLogger.kt  AdbUsageTracker.kt  ConnectedDevicesTracker.kt
temp/src/com/android/adblib/impl/: AdbChannelProviderOpenLocalHost.kt  DeviceInfoTracker.kt  DevicePropertiesImpl.kt  SyncRecvHandler.kt  SyncStatHandler.kt
temp/test/src/com/android/adblib/: AdbLoggerFactoryWithCacheTest.kt  AdbSessionTest.kt
temp/test/src/com/android/adblib/impl/channels/: AdbReadAheadInputChannelTest.kt
temp/test/src/com/android/adblib/testingutils/: AnyExceptionOfMatcher.kt  TestingAdbSessionHost.kt
test/src/com/android/adblib/: AdbHostServicesTest.kt  ExampleUnitTest.kt
test/src/com/android/adblib/impl/: CoroutineScopeCacheTest.kt
test/src/com/android/adblib/impl/channels/: AdbWriteBackOutputChannelTest.kt
test/src/com/android/adblib/testingutils/: FakeAdbServerProvider.kt  TestingAdbLogger.kt
